--- a/index.html
+++ b/index.html
@@ -84,32 +84,32 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>Java/JavaScript &amp; Developer</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            스스로 발전하는 개발자.
+            새로운 것에 두려움을 갖지 않는 개발자.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 October 1982</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.havana1016.github.io</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>010 0000 0000</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Inchon, KOREA</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>41</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Blood type:</strong> <span>B+</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>hasangsu82@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>MBTI:</strong> <span>ISFP</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            <!--Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
+            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.-->
           </p>
         </div>
       </div>
@@ -156,8 +156,8 @@
       </div>
 
     </div><!-- End Counts -->
-
-    <!-- ======= Skills  ======= -->
+    
+    <!-- ======= Skills  ======= 
     <div class="skills container">
 
       <div class="section-title">
@@ -218,9 +218,9 @@
 
       </div>
 
-    </div><!-- End Skills -->
+    </div> End Skills -->
 
-    <!-- ======= Interests ======= -->
+    <!-- ======= Interests ======= 
     <div class="interests container">
 
       <div class="section-title">
@@ -302,9 +302,9 @@
         </div>
       </div>
 
-    </div><!-- End Interests -->
+    </div> End Interests -->
 
-    <!-- ======= Testimonials ======= -->
+    <!-- ======= Testimonials ======= 
     <div class="testimonials container">
 
       <div class="section-title">
@@ -325,7 +325,7 @@
               <h3>Saul Goodman</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item 
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -338,7 +338,7 @@
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div> End testimonial item 
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -351,7 +351,7 @@
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div><!-- End testimonial item 
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -364,7 +364,7 @@
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div> End testimonial item 
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -377,7 +377,7 @@
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>End testimonial item 
 
         </div>
         <div class="swiper-pagination"></div>
@@ -387,9 +387,9 @@
 
       </div>
 
-    </div><!-- End Testimonials  -->
+    </div> End Testimonials  
 
-  </section><!-- End About Section -->
+  </section> End About Section -->
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
