--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Java/JavaScript &amp; Developer</h3>
           <p class="fst-italic">
-            스스로 발전하는 개발자.
+            스스로 발전하는 개발자.<br>
             새로운 것에 두려움을 갖지 않는 개발자.
           </p>
           <div class="row">
@@ -157,7 +157,7 @@
 
     </div><!-- End Counts -->
     
-    <!-- ======= Skills  ======= 
+     ======= Skills  ======= 
     <div class="skills container">
 
       <div class="section-title">
@@ -220,7 +220,7 @@
 
     </div> End Skills -->
 
-    <!-- ======= Interests ======= 
+     ======= Interests ======= 
     <div class="interests container">
 
       <div class="section-title">
@@ -304,7 +304,7 @@
 
     </div> End Interests -->
 
-    <!-- ======= Testimonials ======= 
+     ======= Testimonials ======= 
     <div class="testimonials container">
 
       <div class="section-title">
@@ -351,7 +351,7 @@
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
             </div>
-          </div><!-- End testimonial item 
+          </div> End testimonial item 
 
           <div class="swiper-slide">
             <div class="testimonial-item">
