멍청하게 닫는 섹션태그까지 주석 처리함..하...암튼 이제 보임

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     </div><!-- End Counts -->
     
-     ======= Skills  ======= 
+     <!-- ======= Skills  ======= 
     <div class="skills container">
 
       <div class="section-title">
@@ -220,7 +220,7 @@
 
     </div> End Skills -->
 
-     ======= Interests ======= 
+     <!-- ======= Interests ======= 
     <div class="interests container">
 
       <div class="section-title">
@@ -304,7 +304,7 @@
 
     </div> End Interests -->
 
-     ======= Testimonials ======= 
+    <!-- ======= Testimonials ======= 
     <div class="testimonials container">
 
       <div class="section-title">
@@ -387,9 +387,9 @@
 
       </div>
 
-    </div> End Testimonials  
+    </div> End Testimonials  -->
 
-  </section> End About Section -->
+  </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
