--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>My name is Ha sang-su.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -39,7 +39,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <div class="container">
+    <div class="container" id="hss" >
 
       <h1><a href="index.html">Ha sang-su</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -72,9 +72,10 @@
   <section id="about" class="about">
 
     <!-- ======= About Me ======= -->
-    <div class="about-me container">
+    <div class="about-me container" style=background-color:black padding=30px >
 
       <div class="section-title">
+        <br>
         <h2>About</h2>
         <p>Learn more about me</p>
       </div>
@@ -84,11 +85,13 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Java/JavaScript &amp; Developer</h3>
+            <br>
+            <h3>Java/JavaScript &amp; Developer</h3>
           <p class="fst-italic">
+              <br>
             스스로 발전하는 개발자.<br>
             새로운 것에 두려움을 갖지 않는 개발자.
-          </p>
+          </p><br>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -705,7 +708,7 @@
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/havana_1016/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="window.open('https://www.instagram.com/havana_1016/')" class="instagram" ><i class="bi bi-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
