--- a/index.html
+++ b/index.html
@@ -565,6 +565,19 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web" >
+          <div class="portfolio-wrap" >
+            <img src="assets/img/portfolio/login.png" class="img-fluid" alt="" >
+            <div class="portfolio-info">
+              <h4>로그인 창</h4>
+              <p>JavaScript</p>
+              <div class="portfolio-links">
+                <a href="login.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!--
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
@@ -724,7 +737,7 @@
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="window.open('https://www.instagram.com/havana_1016/')" class="instagram" ><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/havana_1016" target="_blank" class="instagram" ><i class="bi bi-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
