포트폴리오 이미지릭시 창띄우기로 변경

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
               <h4>로그인 창</h4>
               <p>JavaScript</p>
               <div class="portfolio-links">
-                <a href="login.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="login.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><img src="assets/img/portfolio/login.png" class="img-fluid" alt="" ></a>
               </div>
             </div>
           </div>
